# stock-app

./: #README.md#  .#.env  .gitignore  README.md  eslint.config.js  index.html  notes.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  security.py
backend/app/alerts/: dispatcher.py  models.py  push.py  smtp.py
backend/app/analytics/: greeks.py  ivrank.py  optionlab_glue.py  ta.py
backend/app/api/: routes_alerts.py  routes_analytics.py  routes_backtests.py  routes_bots.py  routes_health.py  routes_marketdata.py  routes_orders.py  routes_portfolio.py  routes_screener.py  routes_specs.py  routes_strategies.py  routes_watchlist.py
backend/app/backtests/: compile_backtest.py  (+6 more)
backend/optopsy-worker/: Dockerfile  pyproject.toml  worker.py
backend/tests/: test_agpl_boundary.py  test_backtest_jobqueue.py  test_beta.py  test_bot_lifecycle.py  test_bot_state_machine.py  test_bwdelta.py  test_compile_backtest.py  test_compile_doc.py  test_cvar.py  test_data_loaders.py  test_fidelity_parser.py  test_greeks.py  test_interpreter.py  test_iv_snapshot.py  test_ivrank.py  test_macd.py  test_metrics.py  test_oo_import.py  test_optionlab_glue.py  test_orders_build.py  test_providers.py  test_risk_gate.py  test_robustness.py  test_safety_invariants.py  test_screeners.py  test_signals.py  test_spec_schema.py  test_spec_strategy.py  test_specs_service.py  test_specs_verdict.py  test_spread_math.py  test_ta.py  test_vix_hedge.py  test_watchlist_scan.py
(+131 files in other folders)
