[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vix-screener-backend"
version = "0.1.0"
description = "VIX options hedging screener backend (FastAPI + Interactive Brokers)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "ib_async>=1.0.1",
    "APScheduler>=3.10,<4",
    "sqlmodel>=0.0.21",
    "httpx>=0.27",
    "yfinance>=0.2.60",
    "vollib>=1.0.11",
    "optionlab>=1.6",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
